texts now preserve white space

--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@ main {
   color: white;
   letter-spacing: 1px;
   text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000, 2px 2px 5px #000;
+  white-space: pre-wrap;
 }
 
 .bottom {
